syntax = "proto3";

package ApWatchI;
option optimize_for = LITE_RUNTIME;

message AccessPoint
{
    string SSID = 1;
    uint32 SNR = 2;
    uint32 channel = 3;
}


enum MsgId
{
    Unspecified = 0;

    NewAp = 1;
    RemovedAp = 2;
    ModifiedApParams = 3;
}


message NewApMsg
{
    AccessPoint ap = 1;
}

message RemovedApMsg
{
    AccessPoint ap = 1;
}

message ModifiedApParamsMsg
{
    enum Param
    {
        None = 0;
        SNR = 1;
        channnel = 2;
    }

    AccessPoint oldAp = 1;
    AccessPoint newAp = 2;

    repeated Param changedParams = 3;
}
